--- a/index.html
+++ b/index.html
@@ -20,27 +20,28 @@
     <header class="page-header">
         <div class="container">
             <nav class="nav">
-                <a class="logo-link link" href="WebStudio"><span class=" logo-accent">Web</span>Studio</a>
+                <a class="logo-link link" href="./index.html"><span class=" logo-accent">Web</span>Studio</a>
                 <button class="menu-btn" type="button" data-menu-open>
                     <svg class="" width="40" height="40">
                         <use href="./images/icons.svg#burger-menu"></use>
                     </svg>
                 </button>
                 <ul class="menu-nav header-container list">
-                    <li class="menu-nav__item "><a href="Студия"
+                    <li class="menu-nav__item "><a href="Студія"
                             class="menu-nav__link menu-nav__link--current link">Студія</a>
                     </li>
                     <li class="menu-nav__item"><a href="./portfolio.html" class="menu-nav__link link">Портфоліо</a></li>
-                    <li class="menu-nav__item"><a href="Контакты" class="menu-nav__link link">Контакти</a></li>
+                    <li class="menu-nav__item"><a href="#" class="menu-nav__link link">Контакти</a></li>
 
                 </ul>
                 <ul class="site-nav header-container list">
-                    <li class="site-nav__item "><a class="site-nav__link mail-link link" href="info@devstudio.com">
+                    <li class="site-nav__item "><a class="site-nav__link mail-link link"
+                            href="mailto:info@devstudio.com">
                             <svg class="site-nav__icon-email" width="16" height="12">
                                 <use href="./images/icons.svg#envelope"></use>
                             </svg>info@devstudio.com</a>
                     </li>
-                    <li class="site-nav__item"><a class="site-nav__link tel-link link" href="+380961111111">
+                    <li class="site-nav__item"><a class="site-nav__link tel-link link" href="tel:+380961111111">
                             <svg class="site-nav__icon-tel" width="10" height="16">
                                 <use href="./images/icons.svg#smartphone"></use>
                             </svg>+38 096 111 1111</a></li>
