--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="page-header">
         <div class="container">
             <nav class="nav">
-                <a class="logo-link link" href="WebStudio"><span class="logo-accent">Web</span>Studio</a>
+                <a class="logo-link link" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
                 <button class="menu-btn" type="button" data-menu-open>
                     <svg class="" width="40" height="40">
                         <use href="./images/icons.svg#burger-menu"></use>
@@ -29,7 +29,7 @@
                     <li class="menu-nav__item"><a href="./index.html" class="menu-nav__link link">Студія</a></li>
                     <li class="menu-nav__item"><a href="./portfolio.html"
                             class="menu-nav__link menu-nav__link--current link">Портфоліо</a></li>
-                    <li class="menu-nav__item"><a href="Контакты" class="menu-nav__link link">Контакти</a></li>
+                    <li class="menu-nav__item"><a href="#" class="menu-nav__link link">Контакти</a></li>
 
                 </ul>
                 <ul class="site-nav header-container list">
